--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-4.05MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇷🇺 俄罗斯联邦-3.01MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 捷克-5.22MB/s(Youtube:不良林), server: 195.133.53.192, port: 43688, type: vmess, uuid: bd1c8b57-0a9e-4e9f-a261-48e90c871e41, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
-  - {name: 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇨🇳 中国-380.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.52MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.78MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇺🇸 美国-4.71MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-455.2KB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇨🇳 中国-6.59MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.28MB/s(Youtube:不良林), server: j1.v2.gay, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: j1.v2.gay}}
+  - {name: 🇨🇳 中国-965.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.62MB/s(Youtube:不良林), server: bgpv2.ktyjsq.com, port: 12222, type: vmess, uuid: eddbceb6-a19e-324a-86ed-ecf4fe041656, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-3.19MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-6.53MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-1.09MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
+  - {name: 🇬🇧 英国-1.62MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-3.07MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.01MB/s(Youtube:不良林)
-      - 捷克-5.22MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇮🇳 印度-455.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-965.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.53MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.01MB/s(Youtube:不良林)
-      - 捷克-5.22MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇮🇳 印度-455.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-965.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.53MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.01MB/s(Youtube:不良林)
-      - 捷克-5.22MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇮🇳 印度-455.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-965.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.53MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.01MB/s(Youtube:不良林)
-      - 捷克-5.22MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇮🇳 印度-455.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-965.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.53MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.01MB/s(Youtube:不良林)
-      - 捷克-5.22MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇮🇳 印度-455.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-965.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.53MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.01MB/s(Youtube:不良林)
-      - 捷克-5.22MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇮🇳 印度-455.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-965.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.53MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.01MB/s(Youtube:不良林)
-      - 捷克-5.22MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇮🇳 印度-455.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-965.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.53MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
