--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
   - {name: 🇨🇳 中国-6.59MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.28MB/s(Youtube:不良林), server: j1.v2.gay, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: j1.v2.gay}}
-  - {name: 🇨🇳 中国-965.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.62MB/s(Youtube:不良林), server: bgpv2.ktyjsq.com, port: 12222, type: vmess, uuid: eddbceb6-a19e-324a-86ed-ecf4fe041656, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.19MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.78MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇨🇳 中国-2.12MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇺🇸 美国-620.1KB/s(Youtube:不良林), server: 20.239.176.94, port: 443, type: vmess, uuid: 4adf9138-5aca-4a26-b217-335e72bb680d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.239.176.94}}
+  - {name: 捷克-5.16MB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
   - {name: 🇰🇷 韩国-6.53MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
   - {name: 🇩🇪 德国-1.09MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
   - {name: 🇬🇧 英国-1.62MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-3.07MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.15MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 61c4c45e-d5c8-47ed-ae28-cee95f09b3b7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-965.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-620.1KB/s(Youtube:不良林)
+      - 捷克-5.16MB/s(Youtube:不良林)
       - 🇰🇷 韩国-6.53MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-965.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-620.1KB/s(Youtube:不良林)
+      - 捷克-5.16MB/s(Youtube:不良林)
       - 🇰🇷 韩国-6.53MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-965.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-620.1KB/s(Youtube:不良林)
+      - 捷克-5.16MB/s(Youtube:不良林)
       - 🇰🇷 韩国-6.53MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-965.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-620.1KB/s(Youtube:不良林)
+      - 捷克-5.16MB/s(Youtube:不良林)
       - 🇰🇷 韩国-6.53MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-965.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-620.1KB/s(Youtube:不良林)
+      - 捷克-5.16MB/s(Youtube:不良林)
       - 🇰🇷 韩国-6.53MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-965.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-620.1KB/s(Youtube:不良林)
+      - 捷克-5.16MB/s(Youtube:不良林)
       - 🇰🇷 韩国-6.53MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-965.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-620.1KB/s(Youtube:不良林)
+      - 捷克-5.16MB/s(Youtube:不良林)
       - 🇰🇷 韩国-6.53MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
