--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-6.59MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.78MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇨🇳 中国-2.12MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇺🇸 美国-620.1KB/s(Youtube:不良林), server: 20.239.176.94, port: 443, type: vmess, uuid: 4adf9138-5aca-4a26-b217-335e72bb680d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.239.176.94}}
-  - {name: 捷克-5.16MB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
-  - {name: 🇰🇷 韩国-6.53MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-1.09MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
-  - {name: 🇬🇧 英国-1.62MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-3.07MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.15MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 61c4c45e-d5c8-47ed-ae28-cee95f09b3b7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇫🇷 法国-1.04MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-2.86MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇳 中国-1.59MB/s(Youtube:不良林), server: 43.154.235.119, port: 10064, type: vmess, uuid: 8b115f89-27cc-4ea9-85af-dda2de597928, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.69MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇳🇱 荷兰-338.4KB/s(Youtube:不良林), server: 41.216.177.41, port: 443, type: trojan, password: 274c1b23-2bfe-40ac-943c-ebc1aa044b22, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-10.29MB/s(Youtube:不良林), server: 89.31.126.225, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-3.17MB/s(Youtube:不良林), server: 167.88.61.2, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-3.75MB/s(Youtube:不良林), server: 167.88.61.2, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-3.60MB/s(Youtube:不良林), server: 167.88.61.2, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-620.1KB/s(Youtube:不良林)
-      - 捷克-5.16MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.53MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-338.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-620.1KB/s(Youtube:不良林)
-      - 捷克-5.16MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.53MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-338.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-620.1KB/s(Youtube:不良林)
-      - 捷克-5.16MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.53MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-338.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-620.1KB/s(Youtube:不良林)
-      - 捷克-5.16MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.53MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-338.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-620.1KB/s(Youtube:不良林)
-      - 捷克-5.16MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.53MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-338.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-620.1KB/s(Youtube:不良林)
-      - 捷克-5.16MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.53MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-338.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-620.1KB/s(Youtube:不良林)
-      - 捷克-5.16MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.53MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-338.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
